Fix whitespace

--- a/styles/icons.css
+++ b/styles/icons.css
@@ -50,9 +50,8 @@ a[href^=tel]::before
   { content: '📞' }
 a[href^=sms]::before
   { content: '💬' }
-
-a[href*='maps.apple.com']::before
-  { content: '🌎' }
+a[rel=external]::before
+  { content: '🌐' }
 
 a[href*=twitter]::before
   { content: '🐦' }
